style: fix issue of box shadow not showing on iphone

--- a/css/index.css
+++ b/css/index.css
@@ -64,6 +64,10 @@ main {
   align-items: center;
 }
 
+form {
+  -webkit-appearance: none;
+}
+
 .game-container {
   position: relative;
   width: 420px;
